# ps5-battery

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: release.yml
src/: cli.rs  controllers.rs  gui.rs  info.rs  main.rs
