[package]
name = "ps5-battery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
hidapi = { version = "2.6.1", features = [] }
iced = {version = "0.12.1", default-features = false, features = ["fira-sans", "image"], optional=true}
image = {version = "0.24.9", default-features = false, features = ["ico"], optional=true}

[features]
gui = ["iced", "image", "winres"]
default = ["gui"]

[build-dependencies]
winres = {version = "0.1.12", optional = true}
